log
Wed 08 May 2024 07:28:03 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:15: error: unused variable ‘map’ [-Werror=unused-variable]
   45 |     TreeMap * map = (TreeMap *)malloc(sizeof(TreeMap));
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
a742b0b
Wed 08 May 2024 07:30:23 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:12: error: unused variable ‘pair’ [-Werror=unused-variable]
   46 |     Pair * pair = (Pair*)malloc (sizeof(Pair));
      |            ^~~~
treemap.c:45:16: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   45 |     TreeNode * nuevo= (TreeNode *)malloc(sizeof(TreeNode));
      |                ^~~~~
cc1: all warnings being treated as errors
Compilation failed
4906c0d
Wed 08 May 2024 07:36:18 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:22: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   45 |     TreeNode * mapa= (TreeMap*)malloc(sizeof(TreeMap));
      |                      ^
treemap.c:46:8: error: ‘nuevo’ undeclared (first use in this function)
   46 |     if(nuevo == NULL){
      |        ^~~~~
treemap.c:46:8: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:51:9: error: ‘TreeNode’ has no member named ‘root’
   51 |     mapa->root = NULL;
      |         ^~
treemap.c:52:9: error: ‘TreeNode’ has no member named ‘current’
   52 |     mapa->current = NULL;
      |         ^~
treemap.c:53:9: error: ‘TreeNode’ has no member named ‘lower_than’
   53 |     mapa->lower_than = lower_than;
      |         ^~
treemap.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
babab8a
